--- a/index.html
+++ b/index.html
@@ -1,19 +1,24 @@
-<!DOCTYPE html>
-<html lang="pt-br">
+<!DOCTYPE html><html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>LeBron James</title>
     <link rel="stylesheet" href="style.css">
-    <script src="script.js" defer></script>
-    <title>Notas</title>
 </head>
 <body>
-    <main class="container">
-        <h1 class="container_titulo">Bloco de Notas</h1>
-        <textarea placeholder="Digite Suas Notas..." class="container_texto" id="blocoNotas"></textarea>
-        <button id="limpar" class=container_botao>Limpar notas</button>
-
-    </main>
-
-    </body>
+    <div class="container">
+        <img src="https://lncimg.lance.com.br/cdn-cgi/image/width=850,quality=75,format=webp/uploads/2024/10/LeBron-James-Los-Angeles-Lakers-NBA-1-1920x1280.jpg" alt="LeBron James" class="lebron-img">
+        <div class="bio">
+            <h1>LeBron James</h1>
+            <p>LeBron Raymone James é um jogador de basquete norte-americano que atua pelo Los Angeles Lakers na NBA. 
+               Considerado um dos maiores jogadores da história do basquete, LeBron acumula diversos títulos, 
+               prêmios de MVP e participações no All-Star Game.</p>
+            <div class="buttons">
+                <button onclick="redirecionarInstagram()">Instagram</button>
+                <button onclick="redirecionarWikipedia()">Wikipedia</button>
+            </div>
+        </div>
+    </div>
+    <script src="script.js"></script>
+</body>
 </html>
